# apps-tech.flecs.mqtt-bridge

./: .gitmodules  manifest.json
app/: CMakeLists.txt
app/include/mqtt_bridge/: mqtt_bridge.h
app/src/: mqtt_bridge.cpp
docker/: Dockerfile  versions
